<resources>
    <string name="app_name">Let\'s Get You On-boarded</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="picture_upload">Picture Upload</string>
    <string name="close">X</string>
    <string name="no_image_instruction">Tap on the plus icon to insert your picture</string>
    <string name="image_instruction">Tap on the x icon to clear the image</string>
</resources>
