<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorWhite" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/first_name"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/last_name"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="@string/gender"
                    android:textSize="17dp">

                </TextView>

                <Button
                    android:id="@+id/maleBtn"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/button"
                    android:text="@string/male"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="14dp">

                </Button>

                <Button
                    android:id="@+id/femaleBtn"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/button_unselected"
                    android:text="@string/female"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="14dp">

                </Button>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/phone_number"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/password"
                app:boxBackgroundMode="filled">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/upload_area"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/picture_upload"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/uploadBtn"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_border"
                    android:text="+"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24dp">

                </Button>

                <FrameLayout
                    android:id="@+id/avatarLayout"
                    android:layout_width="172dp"
                    android:layout_height="142dp"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_gravity="center"
                        android:background="@drawable/button_border"
                        android:minWidth="140dp"
                        android:minHeight="140dp" />

                    <Button
                        android:id="@+id/closeBtn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="140dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/close"
                        android:textAllCaps="false"
                        android:textColor="#FF0000"
                        android:textSize="15dp"
                        android:textStyle="bold">

                    </Button>


                </FrameLayout>


                <TextView
                    android:id="@+id/instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:text="@string/no_image_instruction"
                    android:textAlignment="center"
                    android:textSize="14dp" />

            </LinearLayout>


            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:background="@drawable/button"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14dp">

            </Button>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>